# Homework22

./: .env_sample  .gitignore  README.md  catalog.json  db.sqlite3  pyproject.toml  requirements.txt
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_list.html
blog/templates/blog/includes/: inc_menu.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_updated_at.py  0002_rename_price_purchase_product_price.py  0003_alter_product_created_at_alter_product_updated_at.py
catalog/templates/: contacts.html  home.html  product_details.html  product_form.html  product_list.html
catalog/templates/catalog/: base.html  home.html  product_confirm_delete.html  product_detail.html  product_details.html  product_form.html  product_list.html  products_by_category.html  products_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
newapp/: urls.py
user/: admin.py  models.py  urls.py  views.py
user/management/commands/: createadmin.py
user/migrations/: 0001_initial.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
users/templates/: login.html
users/templates/users/: user_form.html
